# npp-load-factor-optimization

./: main.py  pyproject.toml  ruff.toml
excel_results/: 00_1_test_2025-2027_npp_count_1.xlsx
experimental_models/: economic dispatch order.py  extra_fuel_start_up.py  max_startup_count_in_period.py  min_delay_after_shutdown.py  min_status_in_period.py  piecewise_test.py  spinning_reserve.py  test_1_storage_c_share.py  test_forced_startup_shutdown.py  test_storage_control.py  test_storage_maxup_time.py  test_storage_maxup_time_day.py  variable_efficiency.py
experimental_models/01_one_window_two_stacked_bars/: data_2.xlsx  script_2.py
experimental_models/custom_constr/: 1.py
experimental_models/image_to_excel/: image_to_excel.py
experimental_models/model_db/: minuptime_all_period.py  piecewise_test.py  test_cplex_log_to_excel.py  test_day_resolution.py  test_forced_startup_shutdown.py  test_group_lower_1_five_blocks.py  test_group_lower_1_many.py  test_simul_shutdown.py  test_storage_maxup_time_constr.py  two_models.py
experimental_models/planning_outages/: dates_with_grad.py  utilities.py
schemes/: 00_1_test_2025_npp_count_1
src/npp_load_factor_calculator/: __init__.py  (+20 more)
test_models/: change_flow_obj.py  common_share.py  economic dispatch order constraint many.py  economic dispatch order constraint.py  economic dispatch order.py  piecewise_test.py  result_block_level.py  test_day_status.py  test_group_lower_1.py  test_group_lower_1_two_blocks.py  test_min_max_energy.py  test_n_n+1.py  test_storage.py  test_storage_control.py  test_storage_maxup_time.py
(+28 files in other folders)
